compiler/weave_syntax/tests/data/syntax/statements/var0001.source
{
    let if y;
}
{
    let y = 42;
}
{
    if let x(y) = 42 { }
}
